--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build-css": "tailwind build src/styles.css -o dist/styles.css",
     "preview": "vite preview",
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.4.3",
     "@turf/turf": "^6.5.0",
     "maplibre-gl": "^3.6.2",
     "pinia": "^2.1.7",
+    "tailwindcss": "^3.4.3",
     "vue": "^3.4.21",
     "vue-maplibre-gl": "^3.1.3",
     "vue-router": "^4.3.0"
