--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.4.3",
     "@turf/turf": "^6.5.0",
+    "@types/mapbox__mapbox-gl-draw": "^1.4.6",
+    "mapbox-gl": "^3.3.0",
     "maplibre-gl": "^3.6.2",
     "pinia": "^2.1.7",
     "tailwindcss": "^3.4.3",
